<resources>
    <string name="app_name" translatable="false">Driver App</string>
    <!-- Strings related to login -->
    <!--
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or startRegistration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
-->

    <string name="email" translatable="false">Email</string>
    <string name="name">Name</string>
    <string name="email_hint">Fill email to get order receipt and newsletters</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="agree_terms_privacy">By clicking the register button, you agree to our &lt;a href="http://www.google.com">Terms &amp; Conditions&lt;/a>, and &lt;a href="http://www.google.com">Privacy Policy&lt;/a></string>
    <string name="for_registered_users">I\'m already registered in service.</string>
    <string name="not_registered">I\'m not registered yet.</string>
    <string name="address">Address</string>
    <string name="change_address">Change address</string>
    <string name="make_order">Make order</string>
    <string name="destination">Destination</string>
    <string-array name="pay_type">
        <item>Cash</item>
    </string-array>
    <string name="entrance">Entrance</string>
    <string name="wishes">Wishes</string>
    <string name="comment_for_driver">Comment for driver</string>
    <string name="order_for_another_men">Order for another men</string>
    <string name="ready">Done</string>
    <string name="car_delivery">"Car delivery in 10 minutes "</string>
    <string name="cancel_order">Cancel order</string>
    <string name="finding_driver">Finding driver…</string>
    <string name="driver_is_coming">Driver is coming</string>
    <string name="rate_ride">Rate the trip.</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="phone_number_without_7">Phone number without +7</string>
    <string name="use_latin_and_next_symbols">Use latin and next symbols: $@!%*#?&amp;</string>

    <string name="warning_address_not_found">Address wasn\'t found</string>
    <string name="warning_unable_to_locate">Unable to locate a place</string>
    <string name="warning_weak_password">Weak password</string>

    <string name="error_internet_connection">No internet connection!</string>
    <string name="error_wrong_data">Wrong login or password</string>
    <string name="error_invalid_token">Invalid token</string>
    <string name="error_message_server">Server error</string>
    <string name="error_invalid_value">Invalid field value</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="birth_date">Birth day</string>
    <string name="driving_license">Driving license</string>
    <string name="license_expiry_date">License expiry date</string>
    <string name="passport_data">Passport data:</string>
    <string name="load_passport_image">Load passport image</string>
    <string name="load_driving_licence_image">Load driving license image</string>
    <string name="load_sts">Load certificate of registration of the vehicle</string>
    <string name="load_car_image">Load car image</string>
    <string name="image_saved">Image saved</string>
    <string name="error_failed">Failed!</string>
    <string name="continue_registration">Continue registration</string>
    <string name="user_is_already_exists">User is already exists</string>
    <string name="dialog_message_add_auto">Add automobile now or later?</string>
    <string name="dialog_message_add_now">Add now</string>
    <string name="dialog_message_add_later">Later</string>
    <string name="error_cannot_load_car_brands">Can\'t load car brands</string>
    <string name="license_plate">License plate</string>
    <string name="color">Color</string>
    <string name="find_car_model">Find car model</string>
    <string name="error_cannot_load_car_models">Can\'t load car models</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="support">Support</string>
    <string name="make_support_request">Make support request</string>
    <string name="start_work">Start work</string>
    <string name="finish_work">Finish work</string>
    <string name="add_car">Add car</string>
    <string name="save_settings">Save settings</string>
    <string name="delete_car">Delete car</string>
    <string name="order_accept">Accept</string>
    <string name="order_skip">Skip</string>
    <string name="accepted_order_time">Time</string>
    <string name="accepted_order_arrived">I have arrived</string>
    <string name="startPoint">Start point</string>
    <string name="toAcceptedOrderTime">To destination time</string>
    <string name="distance">Distance</string>
    <string name="end_order">End order</string>
    <string name="start_trip">Start trip</string>
    <string name="success_order_accepted_message">Order has been accepted</string>
    <string name="success_order_ended_message">Order has been ended</string>

</resources>
