<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_support_request"
                android:title="@string/make_support_request" />
        </menu>
    </item>

</menu>