<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="end">

    <Button
        android:id="@+id/searchModel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:gravity="center"
        android:hint="@string/find_car_model"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/licensePlate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/license_plate"
            android:inputType="text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/chooseColorButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/color"
            tools:ignore="Autofill" />
    </LinearLayout>
</LinearLayout>